# vtracer-master

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  start-vtracer-ui.bat  stop-vtracer-ui.bat  vtracer-ui.ps1
.claude/: settings.local.json
.claude-flow/data/: ranked-context.json
.claude-flow/sessions/: current.json
.github/workflows/: rust.yml
.tmp-vtracer-settings/: settings.json
cmdapp/: Cargo.toml  README.md  pyproject.toml
cmdapp/src/: converter.rs  lib.rs  main.rs  python.rs
cmdapp/vtracer/: README.md
desktopapp/: README.md
desktopapp/e2e/: cdp-playwright-e2e.js  direct-msedge-probe.ps1  http-desktop-e2e.js  http-session-probe.ps1  msedgedriver-wrapper.cmd  package-lock.json  package.json  run-desktop-e2e.js  session-preflight.js  wdio.conf.cjs
desktopapp/e2e/specs/: desktop.e2e.js
desktopapp/scripts/: build.ps1  dev.ps1
desktopapp/src-tauri/: Cargo.toml  tauri.conf.json
desktopapp/src-tauri/capabilities/: default.json
desktopapp/src-tauri/icons/: icon.icns
desktopapp/src-tauri/src/: main.rs
docs/: 0.bootstrap.js  index.html  vtracer_webapp_bg.wasm
scripts/: build-sync-web-docs.ps1
webapp/: BUILD_STACK_EVALUATION.md  Readme.md
webapp/app/: .gitignore  index.html  index.js  package-lock.json  package.json  playwright.config.js  webpack.config.js
webapp/app/scripts/: assemble-dist.js  clean-dist.js  install-playwright.js  patch-wasm-bindgen-output.js  run-playwright.js  serve-dist.js
webapp/app/tests/e2e/: smoke.spec.js
